--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,4 @@
-MONGODB_URI=mongodb+srv://srnishappy:@Kong1234@cluster0.z9dws.mongodb.net/chat_db?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://srnishappy:%40Kong1234@cluster0.z9dws.mongodb.net/chat_db?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
+JWT_SECRET=srnishappy
+NODE_ENV=development
