--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,6 @@ MONGODB_URI=mongodb+srv://srnishappy:%40Kong1234@cluster0.z9dws.mongodb.net/chat
 PORT=5000
 JWT_SECRET=srnishappy
 NODE_ENV=development
+CLOUNDINARY_CLOUD_NAME=dqvcfcef2
+CLOUNDINARY_API_KEY=162637332584942
+CLOUNDINARY_API_SECRET=f0yRI4tpFxesz9_MWuGjfzO3Wdk
