--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,16 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.14",
+    "axios": "^1.8.3",
     "daisyui": "^5.0.6",
+    "lucide-react": "^0.483.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.3.0",
-    "tailwindcss": "^4.0.14"
+    "react-toastify": "^11.0.5",
+    "tailwindcss": "^4.0.14",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
