--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.14",
     "axios": "^1.8.3",
-    "Chatify": "file:..",
+    "iChat": "file:..",
     "daisyui": "^5.0.6",
     "lucide-react": "^0.483.0",
     "react": "^19.0.0",
